--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@ code {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #B7FFA8;
+    background-color: #1976d2;
     padding: 0.5rem;
 }
